<resources>
    <string name="app_name">Where</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="insert_where">Insert</string>
    <string name="place_title">Place Name</string>
    <string name="place_hint">Name of the place</string>
    <string name="address_title">Address</string>
    <string name="address_hint">Fetching address. Please wait a moment.</string>
    <string name="coordinates_title">Coordinates</string>
    <string name="latitude_hint">Latitude</string>
    <string name="longitude_hint">Longitude</string>
    <string name="find_map">Use Google Map</string>
    <string name="find_nearby">Find Nearby Places</string>
    <string name="search_place">Search a place</string>
    <string name="use_current_location">Use My Current Location</string>

    <string name="no_data">No data</string>
    <string name="empty_place_name">Please enter the name of the place</string>
    <string name="internet_connection_error">Please check your internet connection.</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_where_detail">WhereDetailActivity</string>
    <string name="title_activity_where_create">WhereCreateActivity</string>
    <string name="title_activity_where_map">WhereMapActivity</string>

    <string name="save">Save</string>
    <string name="ok">OK</string>
    <string name="or">or</string>

    <string name="change">Change</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string-array name="drawer_items">
        <item>Tracks</item>
        <item>Places</item>
        <item>Settings</item>
        <item>Feedback</item>
    </string-array>
    <string name="title_activity_where_place">WherePlaceActivity</string>
    <string name="title_activity_where">WhereActivity</string>
</resources>
